--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,7 +4,7 @@
 
 {% block stylesheets %}
     {{ parent() }}
-    <link rel="stylesheet" href="css/Login-Form-Clean.css">
+    <link rel="stylesheet" href="css/login.css">
 {% endblock %}
 
 {% block body %}
@@ -18,18 +18,36 @@
         </div>
     {% endif %}
 
-    <div class="login-clean">
-        <form method="post" action="{{ path('app_login') }}">
-            <h2 class="sr-only">Login Form</h2>
-            <div class="illustration"><i class="icon ion-ios-navigate"></i></div>
-            <div class="form-group"><input class="form-control" type="email" id="inputEmail" name="email" placeholder="Email" value="{{ last_username }}" required autofocus></div>
-            <div class="form-group"><input class="form-control" type="password" id="inputPassword" name="password" placeholder="Password" required></div>
-            <div class="form-group"><button class="btn btn-primary btn-block" type="submit">Log In</button></div><a class="forgot" href="#">Forgot your email or password?</a>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+                <div class="card card-signin my-5">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Sign In</h5>
+                        <form class="form-signin" method="post" action="{{ path('app_login') }}">
+                            <div class="form-label-group">
+                                <input type="email" id="inputEmail" class="form-control" name="email" placeholder="Email address" value="{{ last_username }}" required autofocus>
+                                <label for="inputEmail">Email address</label>
+                            </div>
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
-        </form>
+                            <div class="form-label-group">
+                                <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required>
+                                <label for="inputPassword">Password</label>
+                            </div>
+
+                            <div class="custom-control custom-checkbox mb-3">
+                                <input type="checkbox" class="custom-control-input" id="customCheck1">
+                                <label class="custom-control-label" for="customCheck1">Remember password</label>
+                            </div>
+                            <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign in</button>
+                            <input type="hidden" name="_csrf_token"
+                                   value="{{ csrf_token('authenticate') }}"
+                            >
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 {% endblock %}
