--- a/templates/email/welcome.html.twig
+++ b/templates/email/welcome.html.twig
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Welcome to the Space Bar!</title>
+    <title>Welcome to my website !</title>
     <style>
         body {
             margin: 0;
