--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Hello AdminController!{% endblock %}
 {% block stylesheets %}
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
 {% endblock %}
 
 {% block body %}
@@ -14,5 +14,5 @@
 {% block javascripts %}
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="/js/aymen.js"></script>
+    <script src="{{ asset('js/aymen.js') }}"></script>
 {% endblock %}
