--- a/templates/article/informatique.html.twig
+++ b/templates/article/informatique.html.twig
@@ -76,6 +76,6 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/bootstrap.bundle.min.js"></script>
+    <script src="{{ asset('js/jquery.min.js') }}"></script>
+    <script src="{{ asset('js/bootstrap.bundle.min.js') }}"></script>
 {% endblock %}
