--- a/templates/article/telephonie.html.twig
+++ b/templates/article/telephonie.html.twig
@@ -81,6 +81,6 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script src="/js/jquery.min.js"></script>
-    <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="{{ asset('js/jquery.min.js') }}"></script>
+    <script src="{{ asset('bootstrap/js/bootstrap.bundle.min.js') }}"></script>
 {% endblock %}
