--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -149,6 +149,6 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script src="/js/jquery.min.js"></script>
-    <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="{{ asset('js/jquery.min.js') }}"></script>
+    <script src="{{ asset('bootstrap/js/bootstrap.bundle.min.js') }}"></script>
 {% endblock %}
