--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -8,6 +8,11 @@
 {% block body %}
 
     <div class="container">
+        {% for message in app.session.flashbag.get('PaymentSuccess') %}
+            <div class="alert alert-info">
+                {{ message }}
+            </div>
+        {% endfor %}
 
         <div class="row">
 
