--- a/templates/article/informatique.html.twig
+++ b/templates/article/informatique.html.twig
@@ -47,12 +47,9 @@
                                 <h5>{{ article.prix }} $</h5>
                                 <p class="card-text">{{ article.description }}</p>
                                 <a href="{{ path('panier_add', {id : article.id}) }}" class="btn btn-success float-right">
-                                    <i class="fas fa-shopping-cart mr-1"></i>
+                                    <i class="fa fa-shopping-cart mr-1"></i>
                                     Ajouter
                                 </a>
-                            </div>
-                            <div class="card-footer">
-                                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
                             </div>
                         </div>
                     </div>
