--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -45,8 +45,7 @@
                                     <input type="number" class="form-control" id="quantity" name="quantity" min="1" max="{{ article.quantite }}" value="1">
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-success btn-lg btn-block text-uppercase">
-                                    <i class="fa fa-shopping-cart"></i> Add To Cart
+                            <button type="submit" class="btn btn-success btn-lg btn-block text-uppercase"><i class="fa fa-shopping-cart"></i> Add To Cart
                             </button>
 
                         </form>
