--- a/templates/home/account.html.twig
+++ b/templates/home/account.html.twig
@@ -16,6 +16,7 @@
                 <div class="list-group ">
                     <a href="#profile" data-toggle="tab" class="list-group-item list-group-item-action active">Profile</a>
                     <a href="#login" data-toggle="tab" class="list-group-item list-group-item-action">Login Information</a>
+                    <a href="#order" data-toggle="tab" class="list-group-item list-group-item-action">My Orders</a>
                 </div>
             </div>
             <div class="tab-content" style="width: 800px;">
@@ -133,6 +134,40 @@
                     </div>
                 </div>
             </div>
+
+                <div class="tab-pane" id="order">
+                    <div class="col-md-9">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <h4>Your Orders :</h4>
+                                        <hr>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        {% for commande in commandes %}
+                                        <h5>Nom de l'article : </h5>{{ commande.description }}<br>
+                                        <h5>Quantite : </h5>{{ commande.quantity }}<br>
+                                        <h5>Status : </h5>{{ commande.status }}<br>
+                                        <h5>Date de la commande : </h5>{{ commande.orderDate|date("d/m/Y") }} <br>
+                                        <h5>Prix total : </h5>{{ commande.orderTotal }}$
+                                            <hr>
+                                        {% endfor %}
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
+                </div>
+
+
             </div>
         </div>
     </div>
