--- a/templates/home/editlogin.html.twig
+++ b/templates/home/editlogin.html.twig
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="col-md-3 ">
                 <div class="list-group ">
-                    <a href="#" class="list-group-item list-group-item-action active">Profile</a>
+                    <a href="#" class="list-group-item list-group-item-action active">Login Information</a>
                 </div>
             </div>
             <div class="col-md-9">
@@ -22,7 +22,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-12">
-                                <h4>Your Profile</h4>
+                                <h4>Your Login Information</h4>
                                 <hr>
                             </div>
                         </div>
@@ -31,7 +31,7 @@
                             {{ form_start(form) }}
                                     <div class="form-group row">
                                         <div class="col-8">
-                                    {{ form_row(form.loginName,{'label' : 'Username', 'attr' : {'placeholder' : 'Your email ....','class' : 'form-control'}}) }}
+                                    {{ form_row(form.loginName,{'label' : 'Username', 'attr' : {'placeholder' : 'Your username ....','class' : 'form-control'}}) }}
                                         </div>
                                     </div>
                                     <div class="form-group row">
