--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -7,6 +7,11 @@
 
 {% block body %}
     <div class="container">
+        {% for message in app.session.flashbag.get('PaymentSuccess') %}
+            <div class="alert alert-info">
+                {{ message }}
+            </div>
+        {% endfor %}
         <div class="bg-light p-3">
             <h1>Welcome</h1>
         </div>
