--- a/templates/article/informatique.html.twig
+++ b/templates/article/informatique.html.twig
@@ -55,6 +55,9 @@
                     {% endif %}
                 </div>
 
+                <div class="pagination">
+                    {{ knp_pagination_render(articles) }}
+                </div>
 
             </div>
 
