--- a/templates/home/account.html.twig
+++ b/templates/home/account.html.twig
@@ -173,6 +173,9 @@
                                             {% endfor %}
                                             </tbody>
                                         </table>
+                                        <div class="navigation">
+                                            {{ knp_pagination_render(commandes) }}
+                                        </div>
                                     </div>
                                 </div>
 
