--- a/templates/article/impression.html.twig
+++ b/templates/article/impression.html.twig
@@ -57,7 +57,9 @@
                     {% endif %}
                 </div>
 
-
+                <div class="navigation">
+                    {{ knp_pagination_render(articles) }}
+                </div>
             </div>
 
         </div>
