--- a/templates/article/recherche.html.twig
+++ b/templates/article/recherche.html.twig
@@ -37,6 +37,7 @@
                             {{ message }}
                         </div>
                     {% endfor %}
+                    {% if resultat | length > 0 %}
                     {% for resultat in resultat %}
                         <div class="col-lg-4 col-md-6 mb-4">
                             <div class="card h-100">
@@ -56,6 +57,9 @@
                         </div>
 
                     {% endfor %}
+                    {% else %}
+                    <p>Aucun produit !</p>
+                    {% endif %}
 
                 </div>
 
