--- a/templates/home/profile.html.twig
+++ b/templates/home/profile.html.twig
@@ -31,7 +31,7 @@
                             {{ form_start(form) }}
                                     <div class="form-group row">
                                         <div class="col-8">
-                                    {{ form_row(form.fullname,{'label' : 'Fullname', 'attr' : {'placeholder' : 'Your fullname ....','class' : 'form-control'}}) }}
+                                    {{ form_row(form.fullname,{'label' : 'Fullname','label_attr' : {'class' : 'col-4 col-form-label'}, 'attr' : {'placeholder' : 'Your fullname ....','class' : 'form-control'}}) }}
                                         </div>
                                     </div>
                                     <div class="form-group row">
