--- a/templates/article/reseau.html.twig
+++ b/templates/article/reseau.html.twig
@@ -44,7 +44,7 @@
                                         <h5>{{ article.prix }} $</h5>
                                         <p class="card-text">{{ article.description }}</p>
                                         <a href="{{ path('panier_add', {id : article.id}) }}" class="btn btn-success float-right">
-                                            <i class="fas fa-shopping-cart mr-1"></i>
+                                            <i class="fa fa-shopping-cart mr-1"></i>
                                             Ajouter
                                         </a>
                                     </div>
