--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -3,11 +3,17 @@
 {% block title %}Hello HomeController!{% endblock %}
 {% block stylesheets %}
     {{ parent() }}
+    <link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
 {% endblock %}
 
 {% block body %}
     <div class="container">
         {% for message in app.session.flashbag.get('PaymentSuccess') %}
+            <div class="alert alert-info">
+                {{ message }}
+            </div>
+        {% endfor %}
+        {% for message in app.session.flashbag.get('logged') %}
             <div class="alert alert-info">
                 {{ message }}
             </div>
@@ -47,7 +53,7 @@
                                         <h5>{{ article.prix }} $</h5>
                                         <p class="card-text">{{ article.description }}</p>
                                         <a href="{{ path('panier_add', {id : article.id}) }}" class="btn btn-success float-right">
-                                            <i class="fas fa-shopping-cart mr-1"></i>
+                                            <i class="fa fa-shopping-cart mr-1"></i>
                                             Ajouter
                                         </a>
                                     </div>
@@ -67,12 +73,11 @@
 
     </div>
 
-
-
 {% endblock %}
 
 {% block javascripts %}
     {{ parent() }}
     <script src="{{ asset('js/jquery.min.js') }}"></script>
     <script src="{{ asset('bootstrap/js/bootstrap.bundle.min.js') }}"></script>
+
 {% endblock %}
