--- a/templates/article/recherche.html.twig
+++ b/templates/article/recherche.html.twig
@@ -41,7 +41,7 @@
                     {% for resultat in resultat %}
                         <div class="col-lg-4 col-md-6 mb-4">
                             <div class="card h-100">
-                                <a href="{{ path('article', {id : resultat.id}) }}"><img class="card-img-top" src="/uploads/{{ resultat.image }}" alt=""></a>
+                                <a href="{{ path('article', {id : resultat.id}) }}"><img class="card-img-top" src="uploads/{{ resultat.image }}" alt=""></a>
                                 <div class="card-body">
                                     <h4 class="card-title">
                                         <a href="#">{{ resultat.nom }}</a>
